Get rid of Lombok for api-gateway